--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "assert": "^1.4.1",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "jsonwebtoken": "^7.4.0",
-    "mongodb": "^2.2.28",
+    "mongodb": "^2.2.36",
+    "morgan": "^1.9.1",
     "mysql-promise": "^4.1.0"
   }
 }
