--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "server",
+  "name": "react-app-simple-restaurant-app",
   "version": "1.0.0",
-  "description": "test",
+  "description": "Simple restaurant application",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anijitsahu/react-app-simple-restaurant-app.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/anijitsahu/react-app-simple-restaurant-app/issues"
+  },
+  "homepage": "https://github.com/anijitsahu/react-app-simple-restaurant-app#readme",
   "dependencies": {
     "assert": "^1.4.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "jsonwebtoken": "^7.4.0",
     "mongodb": "^2.2.36",
-    "morgan": "^1.9.1",
-    "mysql-promise": "^4.1.0"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
