--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
+    "html-react-parser": "^0.6.0",
     "mini-css-extract-plugin": "^0.4.4",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
