--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongodb": "^2.2.36",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "npm": "^6.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
